# llm

./: config_small.yaml  export_wiki_raw.py  pyproject.toml  requirements.txt  sample.py  train.py
config/: config_small.yaml  config_tiny.yaml  config_toy.yaml
data/: wiki_toy_train.jsonl
data/processed_tiny/: val.jsonl
data/processed_train/: README.md
data/processed_val_medium/: wiki_original.jsonl
src/: data_module.py  lit_gpt.py  train.py
src/data_engine/: preprocess_wiki.py
