[project]
name = "llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.4.1",
    "pytorch-lightning>=2.2",
    "pyyaml>=6.0.3",
    "spacy>=3.8.11",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
    "transformers>=4.40",
]
